--- a/report/summary.tex
+++ b/report/summary.tex
@@ -372,7 +372,7 @@ Specifically, the leaderboard measures the 25-shot performance of LLMs on the ar
 For arc-challenge and HellaSwag performance is measured using the acc$-$norm metric of EleutherAI, for TruthfulQA they use the mc2 metric, and for MMLU they average the accuracy of the model across tasks in the MMLU dataset.
 The nice thing about the leaderboard is one can submit either the full model or submit just the adapter layers and give the base model separately.
 However, it is our understanding that if we submit the adapter layers separately then the models are merged using the ``simple-merge" described above.
-\begin{table}[h]
+\begin{table}
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|c|}
 \hline
@@ -430,33 +430,44 @@ We include the original Llama-2 model as a baseline to measure how much fine-tun
 In addition, we also include ``off-diagonal" elements, where we train a model on one dataset and measure its ROUGE and BERTScores on the validation split of a different dataset.
 For example, we include cases where we train the model on the ELI5 SFT dataset and then evaluate it on the validation split of the Simple Wikipedia QA dataset.
 We included these results to serve as additional baselines to see to what extent fine-tuning on \textit{any} QA dataset changes the evaluation metrics.
+We also include tables comparing the average FRE and FKG scores for each on model on each small validation set.
 In all cases, we limit the model to produce at most 512 new tokens.
+
+For the  tables, we follow standard notation and use bold numbers to signify the model which performs the best on that validation set.
+However, this is mostly used to guide the eye and these numbers should not be used as the sole guide to determine which model is ``better".
+When there is a tie (to the degree of precision we present) we bold the answer with the smaller standard deviation.
+In many cases, the difference in performance between two models is much smaller than the standard deviation and in many cases all models fall within one standard deviation of each other.
+In order to get a better judge about which model is actually performing the best, we present kernel density estimate (KDE) plots to directly visualize the difference in performance for each model on a fixed dataset. 
+\\[10pt]
+\textbf{7B Models}
+\\[10pt]
 \begin{table}[ht]
-\centering
+\hspace{-.5in}
+%\centering
 \begin{tabular}{lcccccccc}
 \toprule
 \multicolumn{2}{c}{Dataset} & \multicolumn{1}{c}{Rouge1} & \multicolumn{1}{c}{Rouge2} & \multicolumn{1}{c}{RougeL} & \multicolumn{1}{c}{RougeLSum} \\
 \midrule
-\multirow{6}{*}{ELI5} & Llama-2-7b & 0.298 (0.116) & 0.171 (0.122) & 0.221 (0.118) & 0.250 (0.115) \\
+\multirow{6}{*}{ELI5} & Llama-2-7b & \textbf{0.298 (0.116)} & \textbf{0.171 (0.122)} & \textbf{0.221 (0.118)} & \textbf{0.250 (0.115)} \\
 & Llama-2-7b-ELI5 & 0.292 (0.096) & 0.146 (0.085) & 0.200 (0.081) & 0.209 (0.084) \\
 & Llama-2-7b-Wiki & 0.270 (0.098) & 0.143 (0.092) & 0.189 (0.089) & 0.201 (0.091) \\
 & Llama-2-7b-ELI5-Wiki & 0.290 (0.097) & 0.146 (0.083) & 0.198 (0.079) & 0.206 (0.082) \\
 & Llama-2-7b-ELI5-Cleaned & 0.284 (0.098) & 0.148 (0.089) & 0.197 (0.086) & 0.205 (0.088) \\
 & Llama-2-7b-ELI5-Cleaned-Wiki & 0.295 (0.099) & 0.150 (0.083) & 0.203 (0.080) & 0.212 (0.083) \\
 \midrule
-\multirow{6}{*}{full} & Llama-2-7b & 0.221 (0.081) & 0.097 (0.085) & 0.152 (0.081) & 0.176 (0.080) \\
-& Llama-2-7b-ELI5 & 0.218 (0.077) & 0.082 (0.068) & 0.142 (0.064) & 0.151 (0.066) \\
-& Llama-2-7b-Wiki & 0.241 (0.063) & 0.109 (0.062) & 0.165 (0.057) & 0.175 (0.058) \\
-& Llama-2-7b-ELI5-Wiki & 0.250 (0.072) & 0.111 (0.063) & 0.168 (0.059) & 0.177 (0.060) \\
-& Llama-2-7b-ELI5-Cleaned & 0.215 (0.076) & 0.084 (0.070) & 0.138 (0.066) & 0.147 (0.068) \\
-& Llama-2-7b-ELI5-Cleaned-Wiki & 0.250 (0.070) & 0.112 (0.063) & 0.169 (0.060) & 0.180 (0.061) \\
-\midrule
 \multirow{6}{*}{Wiki} & Llama-2-7b & 0.207 (0.066) & 0.081 (0.050) & 0.137 (0.056) & 0.163 (0.058) \\
 & Llama-2-7b-ELI5 & 0.193 (0.051) & 0.064 (0.030) & 0.120 (0.031) & 0.132 (0.038) \\
 & Llama-2-7b-Wiki & 0.229 (0.052) & 0.097 (0.033) & 0.153 (0.031) & 0.168 (0.041) \\
 & Llama-2-7b-ELI5-Wiki & 0.238 (0.050) & 0.103 (0.037) & 0.159 (0.035) & 0.174 (0.041) \\
 & Llama-2-7b-ELI5-Cleaned & 0.195 (0.052) & 0.067 (0.031) & 0.120 (0.032) & 0.132 (0.039) \\
-& Llama-2-7b-ELI5-Cleaned-Wiki & 0.246 (0.057) & 0.108 (0.038) & 0.165 (0.039) & 0.181 (0.049) \\
+& Llama-2-7b-ELI5-Cleaned-Wiki & \textbf{0.246 (0.057)} & \textbf{0.108 (0.038)} & \textbf{0.165 (0.039)} & \textbf{0.181 (0.049)} \\
+\midrule
+\multirow{6}{*}{full} & Llama-2-7b & 0.221 (0.081) & 0.097 (0.085) & 0.152 (0.081) & 0.176 (0.080) \\
+& Llama-2-7b-ELI5 & 0.218 (0.077) & 0.082 (0.068) & 0.142 (0.064) & 0.151 (0.066) \\
+& Llama-2-7b-Wiki & 0.241 (0.063) & 0.109 (0.062) & 0.165 (0.057) & 0.175 (0.058) \\
+& Llama-2-7b-ELI5-Wiki & 0.250 (0.072) & 0.111 (0.063) & 0.168 (0.059) & 0.177 (0.060) \\
+& Llama-2-7b-ELI5-Cleaned & 0.215 (0.076) & 0.084 (0.070) & 0.138 (0.066) & 0.147 (0.068) \\
+& Llama-2-7b-ELI5-Cleaned-Wiki & \textbf{0.250 (0.070)} & \textbf{0.112 (0.063)} & \textbf{0.169 (0.060)} & \textbf{0.180 (0.061)} \\
 \bottomrule
 \end{tabular}
 \caption{Rouge Scores at 7 billion.}
@@ -464,66 +475,76 @@ In all cases, we limit the model to produce at most 512 new tokens.
 \end{table}
 
 \begin{table}[ht]
-\centering
+\hspace{-.75in}
+%\centering
 \begin{tabular}{lcccccc}
 \toprule
 \multicolumn{2}{c}{Dataset} & \multicolumn{1}{c}{Precision} & \multicolumn{1}{c}{Recall} & \multicolumn{1}{c}{F1} \\
 \midrule
-\multirow{6}{*}{ELI5} & Llama-2-7b & 0.801877 (0.041669) & 0.870131 (0.036416) & 0.833800 (0.029312) \\
-& Llama-2-7b-ELI5 & 0.800753 (0.031411) & 0.874340 (0.033276) & 0.835400 (0.024897) \\
+\multirow{6}{*}{ELI5} & Llama-2-7b & \textbf{0.801877 (0.041669)} & 0.870131 (0.036416) & 0.833800 (0.029312) \\
+& Llama-2-7b-ELI5 & 0.800753 (0.031411) & 0.874340 (0.033276) & \textbf{0.835400 (0.024897)} \\
 & Llama-2-7b-Wiki & 0.796885 (0.030591) & 0.873895 (0.033967) & 0.833161 (0.025661) \\
 & Llama-2-7b-ELI5-Wiki & 0.800286 (0.031993) & 0.874562 (0.032835) & 0.835300 (0.025810) \\
 & Llama-2-7b-ELI5-Cleaned & 0.796125 (0.032983) & 0.874431 (0.033228) & 0.832937 (0.026229) \\
-& Llama-2-7b-ELI5-Cleaned-Wiki & 0.796381 (0.034365) & 0.875127 (0.033577) & 0.833397 (0.027465) \\
+& Llama-2-7b-ELI5-Cleaned-Wiki & 0.796381 (0.034365) & \textbf{0.875127 (0.033577)} & 0.833397 (0.027465) \\
 \midrule
 \multirow{6}{*}{Wiki} & Llama-2-7b & 0.769545 (0.038940) & 0.842348 (0.029678) & 0.803821 (0.029034) \\
 & Llama-2-7b-ELI5 & 0.775096 (0.024422) & 0.843807 (0.025343) & 0.807686 (0.019836) \\
 & Llama-2-7b-Wiki & 0.793727 (0.021894) & 0.881525 (0.026325) & 0.835074 (0.019327) \\
 & Llama-2-7b-ELI5-Wiki & 0.794967 (0.021917) & 0.882922 (0.024376) & 0.836404 (0.018643) \\
 & Llama-2-7b-ELI5-Cleaned & 0.761646 (0.031678) & 0.848510 (0.026560) & 0.802358 (0.024478) \\
-& Llama-2-7b-ELI5-Cleaned-Wiki & 0.799032 (0.020367) & 0.884777 (0.023089) & 0.839490 (0.016528) \\
+& Llama-2-7b-ELI5-Cleaned-Wiki & \textbf{0.799032 (0.020367)} & \textbf{0.884777 (0.023089)} & \textbf{0.839490 (0.016528)} \\
 \midrule
 \multirow{6}{*}{full} & Llama-2-7b & 0.778881 (0.035265) & 0.854549 (0.033425) & 0.814540 (0.028644) \\
 & Llama-2-7b-ELI5 & 0.776775 (0.037984) & 0.855862 (0.031126) & 0.813894 (0.029722) \\
 & Llama-2-7b-Wiki & 0.797234 (0.022978) & 0.885740 (0.026650) & 0.838917 (0.020343) \\
-& Llama-2-7b-ELI5-Wiki & 0.796534 (0.022784) & 0.885833 (0.025359) & 0.838515 (0.018211) \\
+& Llama-2-7b-ELI5-Wiki & 0.796534 (0.022784) & \textbf{0.885833 (0.025359)} & 0.838515 (0.018211) \\
 & Llama-2-7b-ELI5-Cleaned & 0.775235 (0.030981) & 0.864166 (0.029041) & 0.816898 (0.024698) \\
-& Llama-2-7b-ELI5-Cleaned-Wiki & 0.800189 (0.024002) & 0.885813 (0.025549) & 0.840569 (0.019985) \\
+& Llama-2-7b-ELI5-Cleaned-Wiki & \textbf{0.800189 (0.024002)} & 0.885813 (0.025549) & \textbf{0.840569 (0.019985)} \\
 \bottomrule
 \end{tabular}
 \caption{BERTScore precision, recall, and F1 at 7B. The values in parentheses are the standard deviations.}
 \label{tab:bertscores_7b}
 \end{table}
-
-
-%\end{table}
-
-%\caption{BERTScore precision, recall, and F1 at 7B. The values in parentheses are the standard deviations.}
-%\label{tab:bertscores_7b}
-
-First we will look at the ROUGE and BERTScore for the 7 billion parameter models.
-In Table \ref{tab:rouge_scores_7B} the first thing we notice is that the ROUGE scores do not align at all with our na\"ive expectations.
-On the ELI5 SFT dataset the base Llama-2-7b model performs the best while on the Simple Wikipedia dataset the base model and model fine-tuned on ELI5 performs the best!
-It appears the ELI5 models strong performance on the Simple Wikipedia dataset helps it also perform well on the validation set containing both ELI5 and Simple Wikipedia.
-It should also be noted that in most cases the difference in ROUGE scores among our fine-tuned models is fairly small.
-We also note that the base model performs noticeably better according to the ROUGELsum metric for all three datasets.
-Finally, it appears that the ELI5 dataset is simpler to model and the models can achieve higher ROUGE scores on the ELI5 dataset versus the other two.
-
-We notice a similar phenomenon in Table \ref{tab:bertscores_7b} where the model which performs the best is either the base model or a model trained on a different dataset than the one we are evaluating on.
-The sole exception is that the model trained on the ELI5 SFT dataset does achieve the highest F1 score on the ELI5 validation set, but the improvement over the other models is marginal.
-According to the BERTScore metrics, the base model does not appear to behave significantly better than our fine-tuned models.
-We do again note that all models achieve higher scores on the ELI5 validation split in comparison to the other two datasets. 
-
-Overall, it's not clear how to interpret these results.
-One reasonable conjecture is that how well a model performs, according to the ROUGE and BERTScores, may be determined more by the pretraining process and less by how the model is fine-tuned.
-There is also a good chance some of the questions which appear in our validation sets appeared in the training set of the base model and our fine-tuned models may be forgetting the answers.
-
-To better interpret these results, we have also included figures for the distribution of the F1 BERTscore and the RougeLSum metric for each dataset.
+%To better interpret these results, we have also included figures for the distribution of the F1 BERTscore and the RougeLSum metric for each dataset, see figure \ref{fig:rouge_bertscore_7B}
 \begin{figure}
-\includegraphics[scale=.5]{}
+\includegraphics[scale=.5]{./figures/rougelsum_7B_eli5}
+\includegraphics[scale=.5]{./figures/bertscore_F1_7B_eli5}
+\includegraphics[scale=.5]{./figures/rougelsum_7B_wiki}
+\includegraphics[scale=.5]{./figures/bertscore_F1_7B_wiki}
+\includegraphics[scale=.5]{./figures/rougelsum_7B_full}
+\includegraphics[scale=.5]{./figures/bertscore_F1_7B_full}
+\caption{ROUGE and BERTScore metrics for the 7B models.}
+\label{fig:rouge_bertscore_7B}
 \end{figure}
+What can we determine from Tables \ref{tab:rouge_scores_7B} and \ref{tab:bertscores_7b} as well as Figure \ref{fig:rouge_bertscore_7B}? The first thing we can note is that the base Llama-2-7B model consistently achieves the highest ROUGE score on the ELI5 dataset, while the fine-tuned models are clustered around similar values.
+By contrast, the difference in BERTScores among all models is fairly small and the distributions appear almost identical.
+We notice more significant changes for the validation sets constructed from the Simple Wikipedia and combined SFT datasets.
+On Simple Wikipedia, the model trained on the ELI5-Cleaned + Simple Wikipedia dataset performs the best, although the the other models are within one standard deviation.
+From the KDE plots we notice the RougeLSum score for these models is shifted slightly to the right. 
+We notice a more significant improvement when looking at the BERTScores, and in particular see that the model trained on the ELI5-Cleaned + Simple Wikipedia dataset performs noticeably better according to the recall and F1 metrics.
+The same conclusions carry over for the models evaluated on the validation set containing QA pairs from both the ELI5 and Simple Wikipedia datasets: the models trained on the combined datasets exhibit a small improvement according to the ROUGE metrics, and a more significant improvement on the BERTScore metrics.
+All of these results are more clearly visualized using the KDE plots presented in Figure \ref{fig:rouge_bertscore_7B}.
 
-\begin{table}[h]
+
+%First we will look at the ROUGE and BERTScore for the 7 billion parameter models.
+%In Table \ref{tab:rouge_scores_7B} the first thing we notice is that the ROUGE scores do not align at all with our na\"ive expectations.
+%On the ELI5 SFT dataset the base Llama-2-7b model performs the best while on the Simple Wikipedia dataset the base model and model fine-tuned on ELI5 performs the best!
+%It appears the ELI5 models strong performance on the Simple Wikipedia dataset helps it also perform well on the validation set containing both ELI5 and Simple Wikipedia.
+%It should also be noted that in most cases the difference in ROUGE scores among our fine-tuned models is fairly small.
+%We also note that the base model performs noticeably better according to the ROUGELsum metric for all three datasets.
+%Finally, it appears that the ELI5 dataset is simpler to model and the models can achieve higher ROUGE scores on the ELI5 dataset versus the other two.
+%
+%We notice a similar phenomenon in Table \ref{tab:bertscores_7b} where the model which performs the best is either the base model or a model trained on a different dataset than the one we are evaluating on.
+%The sole exception is that the model trained on the ELI5 SFT dataset does achieve the highest F1 score on the ELI5 validation set, but the improvement over the other models is marginal.
+%According to the BERTScore metrics, the base model does not appear to behave significantly better than our fine-tuned models.
+%We do again note that all models achieve higher scores on the ELI5 validation split in comparison to the other two datasets. 
+%
+%Overall, it's not clear how to interpret these results.
+%One reasonable conjecture is that how well a model performs, according to the ROUGE and BERTScores, may be determined more by the pretraining process and less by how the model is fine-tuned.
+%There is also a good chance some of the questions which appear in our validation sets appeared in the training set of the base model and our fine-tuned models may be forgetting the answers.
+
+\begin{table}
 \centering
 \begin{tabular}{cccccc}
 \hline
@@ -554,62 +575,70 @@ Dataset & Model & FRE & FKG \\
 \caption{FRE and FKG Scores at 7B.}
 \label{tab:flesch_scores_7B}
 \end{table}
-Next, in Table \ref{tab:flesch_scores_7B} we look at how fine-tuning our models affects their Flesch-Kincaid readability metrics.
+
+Next, in Table \ref{tab:flesch_scores_7B} and Figure \ref{fig:KDE_FKG_7B} we look at how fine-tuning our models affects their Flesch-Kincaid readability metrics.
 We observe that in generally, fine-tuning the models lead to an increase in the Flesch Readability Ease (FRE) score and a decrease in the Flesch-Kincaid grade level (FKG). 
-There are however a few exceptions.
+There are however a few exceptions which are noticeable in Table \ref{tab:flesch_scores_7B}.
 We note that the model trained on just Simple Wikipedia and evaluated on the ELI5 validation set has a lower FRE and a higher FKG than the corresponding base model.
 This indicates that the text is considered more complex on both metrics.
 In addition, the model trained on the cleaned ELI5 dataset has a higher FKG score than the base model, but also a higher FRE score.
 For this model the results are inconclusive and its not clear which model, the fine-tuned model or the base model, is producing simpler text.
 For all other models and benchmarks, we observe that fine-tuning on our datasets leads to an increase in the FRE score and a decrease in the FKG level.
+These observations are also consistent with the KDE plots in Figure \ref{fig:KDE_FKG_7B}, we see that in general our fine-tuned models display stronger peaks at higher values of the FRE metric and lower values of the FKG level.
+The change in distribution is particularly noticeable for the model trained on just the ELI5 dataset, although we caution that this may not be a good indicator this model is actually performing the best.
+We also observe that the model trained on just the Simple Wikipedia QA dataset and evaluated on the ELI5 dataset appears closer in distribution to the base model than the other fine-tuned models.
 
-To get a better visualization of the FRE and FKG scores, we make a KDE plot visualizing the difference in distribution for the Flesch-Kincaid readability scores of different models on a given dataset.
 \begin{figure}
 \includegraphics[scale=.5]{./figures/FRE_7B_ELI5.png}
-\includegraphics[scale=.5]{./figures/FRE_7B_Wiki.png}
-\\
-\includegraphics[scale=.5]{./figures/FRE_7B_full.png}
 \includegraphics[scale=.5]{./figures/FKG_7B_ELI5.png}
 \\
+\includegraphics[scale=.5]{./figures/FRE_7B_Wiki.png}
 \includegraphics[scale=.5]{./figures/FKG_7B_Wiki.png}
+\\
+\includegraphics[scale=.5]{./figures/FRE_7B_full.png}
 \includegraphics[scale=.5]{./figures/FKG_7B_full.png}
+\caption{KDE plots for Flesch-Kincaid Metrics at 7B}
+\label{fig:KDE_FKG_7B}
 \end{figure}
-%\\[10pt]
+\
+\\[10pt]
 \noindent\textbf{13B Models}
 \\[10pt]
-Our analysis of the ROUGE and BERTScores at 13B will closely mirror what we observed at 7B parameters.
-In Table \ref{tab:rouge_scores_13B} we see that the base Llama-2 model achieves the highest ROUGE score for all metrics on the ELI5 dataset. In addition, models trained on just the ELI5 dataset appear to achieve the highest ROUGE scores when evaluated on the Simple Wikipedia validation dataset and also perform well when evaluated on the dataset containing questions from both ELI5 and the Simple Wikipedia dataset..
-We also again observe that the base Llama-2 model achieves a noticeably higher ROUGELsum score on all three datasets in comparison to our fine-tuned models and that all models perform the best when evaluated on the ELI5 questions.
-
-In Table \ref{tab:bertscores_13B} we also observe that the BERTScores at 13B are similar to those at 7B. 
-We see that in many cases the base model achieves the highest BERTScore, but also that the differences between all of the models is relatively small.
-Finally, as we before, we observe that all models achieve higher scores on the ELI5 validation set in comparison to the other two sets.
-We gain suspect that the models performance, according to these automatic metrics, may be driven more by the pretraining dataset and less by the datasets we fine-tuned on.
-
+Our analysis of the ROUGE, BERTScore, and Flesch-Kincaid metrics at 13B will closely mirror what we observed at 7B parameters.
+We have again included figures for the distribution of the F1 BERTscore, RougeLSum, and the two Flesh-Kincaid metrics for each dataset to see how fine-tuning effects these metrics, see Figure \ref{fig:rouge_bertscore_13B}.
+%We also believe the KDE plots in Figure \ref{fig:rouge_bertscore_13B} give a clearer picture of how fine-tuning effects these metrics in comparison to the results in Tables \ref{tab:rouge_scores_13B}-\ref{tab:FRE_FKG_13B}, although these results are also useful.
+%In Table \ref{tab:rouge_scores_13B} we see that the base Llama-2 model achieves the highest ROUGE score for all metrics on the ELI5 dataset. In addition, models trained on just the ELI5 dataset appear to achieve the highest ROUGE scores when evaluated on the Simple Wikipedia validation dataset and also perform well when evaluated on the dataset containing questions from both ELI5 and the Simple Wikipedia dataset..
+%We also again observe that the base Llama-2 model achieves a noticeably higher ROUGELsum score on all three datasets in comparison to our fine-tuned models and that all models perform the best when evaluated on the ELI5 questions.
+%
+%In Table \ref{tab:bertscores_13B} we also observe that the BERTScores at 13B are similar to those at 7B. 
+%We see that in many cases the base model achieves the highest BERTScore, but also that the differences between all of the models is relatively small.
+%Finally, as we before, we observe that all models achieve higher scores on the ELI5 validation set in comparison to the other two sets.
+%We gain suspect that the models performance, according to these automatic metrics, may be driven more by the pretraining dataset and less by the datasets we fine-tuned on.
 \begin{table}[ht]
-\centering
+%\centering
+\hspace{-.5in}
 \begin{tabular}{lcccccccc}
 \toprule
 \multicolumn{2}{c}{Dataset} & \multicolumn{1}{c}{rouge1} & \multicolumn{1}{c}{rouge2} & \multicolumn{1}{c}{rougeL} & \multicolumn{1}{c}{rougeLsum} \\
 \midrule
-\multirow{6}{*}{ELI5} & Llama-2-13b & 0.307 (0.110) & 0.179 (0.119) & 0.232 (0.114) & 0.263 (0.111) \\
+\multirow{6}{*}{ELI5} & Llama-2-13b & \textbf{0.307 (0.110)} & \textbf{0.179 (0.119)} & \textbf{0.232 (0.114)} & \textbf{0.263 (0.111)} \\
 & Llama-2-13b-ELI5 & 0.297 (0.100) & 0.152 (0.087) & 0.204 (0.082) & 0.213 (0.085) \\
 & Llama-2-13b-Wiki & 0.277 (0.097) & 0.146 (0.090) & 0.193 (0.086) & 0.208 (0.089) \\
 & Llama-2-13b-ELI5-Wiki & 0.293 (0.095) & 0.150 (0.085) & 0.203 (0.081) & 0.212 (0.084) \\
 & Llama-2-13b-ELI5-Cleaned & 0.296 (0.103) & 0.154 (0.090) & 0.208 (0.086) & 0.217 (0.089) \\
 & Llama-2-13b-ELI5-Cleaned-Wiki & 0.293 (0.095) & 0.150 (0.083) & 0.203 (0.079) & 0.213 (0.083) \\
 \midrule
-\multirow{6}{*}{Wiki} & Llama-2-13b & 0.238 (0.083) & 0.104 (0.067) & 0.166 (0.074) & 0.193 (0.072) \\
+\multirow{6}{*}{Wiki} & Llama-2-13b & 0.238 (0.083) & 0.104 (0.067) & 0.166 (0.074) & \textbf{0.193 (0.072)} \\
 & Llama-2-13b-ELI5 & 0.201 (0.057) & 0.069 (0.035) & 0.126 (0.039) & 0.138 (0.043) \\
-& Llama-2-13b-Wiki & 0.243 (0.061) & 0.113 (0.043) & 0.166 (0.045) & 0.181 (0.053) \\
-& Llama-2-13b-ELI5-Wiki & 0.248 (0.065) & 0.113 (0.045) & 0.170 (0.043) & 0.184 (0.053) \\
+& Llama-2-13b-Wiki & 0.243 (0.061) & \textbf{0.113 (0.043)} & 0.166 (0.045) & 0.181 (0.053) \\
+& Llama-2-13b-ELI5-Wiki & \textbf{0.248 (0.065)} & 0.113 (0.045) & 0.170 (0.043) & 0.184 (0.053) \\
 & Llama-2-13b-ELI5-Cleaned & 0.210 (0.060) & 0.080 (0.043) & 0.137 (0.050) & 0.150 (0.054) \\
-& Llama-2-13b-ELI5-Cleaned-Wiki & 0.246 (0.055) & 0.111 (0.041) & 0.171 (0.039) & 0.184 (0.048) \\
+& Llama-2-13b-ELI5-Cleaned-Wiki & 0.246 (0.055) & 0.111 (0.041) & \textbf{0.171 (0.039)} & 0.184 (0.048) \\
 \midrule
-\multirow{6}{*}{full} & Llama-2-13b & 0.254 (0.080) & 0.118 (0.081) & 0.177 (0.079) & 0.207 (0.077) \\
+\multirow{6}{*}{full} & Llama-2-13b & 0.254 (0.080) & 0.118 (0.081) & 0.177 (0.079) & \textbf{0.207 (0.077)} \\
 & Llama-2-13b-ELI5 & 0.227 (0.077) & 0.091 (0.071) & 0.147 (0.070) & 0.157 (0.072) \\
 & Llama-2-13b-Wiki & 0.253 (0.075) & 0.120 (0.069) & 0.173 (0.067) & 0.186 (0.067) \\
-& Llama-2-13b-ELI5-Wiki & 0.262 (0.075) & 0.122 (0.068) & 0.179 (0.063) & 0.190 (0.065) \\
+& Llama-2-13b-ELI5-Wiki & \textbf{0.262 (0.075)} & \textbf{0.122 (0.068)} & \textbf{0.179 (0.063)} & 0.190 (0.065) \\
 & Llama-2-13b-ELI5-Cleaned & 0.227 (0.079) & 0.092 (0.070) & 0.148 (0.068) & 0.159 (0.070) \\
 & Llama-2-13b-ELI5-Cleaned-Wiki & 0.262 (0.080) & 0.121 (0.064) & 0.176 (0.062) & 0.188 (0.065) \\
 \bottomrule
@@ -624,17 +653,17 @@ We gain suspect that the models performance, according to these automatic metric
 \toprule
 Dataset& Model Name  & Precision & Recall & F1 \\
 \midrule
-\multirow{6}{*}{ELI5} & Llama-2-13b & 0.809 (0.043) & 0.867 (0.036) & 0.837 (0.031) \\
-& Llama-2-13b-ELI5 & 0.799 (0.033) & 0.876 (0.034) & 0.835 (0.026) \\
+\multirow{6}{*}{ELI5} & Llama-2-13b & \textbf{0.809 (0.043)} & 0.867 (0.036) & \textbf{0.837 (0.031)} \\
+& Llama-2-13b-ELI5 & 0.799 (0.033) & 0.875 (0.034) & 0.835 (0.026) \\
 & Llama-2-13b-Wiki & 0.799 (0.032) & 0.873 (0.035) & 0.834 (0.026) \\
 & Llama-2-13b-ELI5-Wiki & 0.799 (0.033) & 0.875 (0.034) & 0.834 (0.026) \\
 & Llama-2-13b-ELI5-Cleaned & 0.797 (0.034) & 0.875 (0.034) & 0.834 (0.028) \\
-& Llama-2-13b-ELI5-Cleaned-Wiki & 0.801 (0.033) & 0.876 (0.034) & 0.836 (0.027) \\
+& Llama-2-13b-ELI5-Cleaned-Wiki & 0.801 (0.033) & \textbf{0.876 (0.034)} & 0.836 (0.027) \\
 \midrule
 \multirow{6}{*}{Wiki} & Llama-2-13b & 0.791 (0.047) & 0.849 (0.033) & 0.818 (0.035) \\
 & Llama-2-13b-ELI5 & 0.774 (0.032) & 0.847 (0.025) & 0.808 (0.024) \\
 & Llama-2-13b-Wiki & 0.796 (0.026) & 0.886 (0.022) & 0.838 (0.020) \\
-& Llama-2-13b-ELI5-Wiki & 0.800 (0.020) & 0.887 (0.022) & 0.841 (0.017) \\
+& Llama-2-13b-ELI5-Wiki & \textbf{0.800 (0.020)} & \textbf{0.887 (0.022)} & \textbf{0.841 (0.017)} \\
 & Llama-2-13b-ELI5-Cleaned & 0.773 (0.041) & 0.848 (0.025) & 0.808 (0.030) \\
 & Llama-2-13b-ELI5-Cleaned-Wiki & 0.798 (0.023) & 0.885 (0.024) & 0.839 (0.019) \\
 \midrule
@@ -643,34 +672,55 @@ Dataset& Model Name  & Precision & Recall & F1 \\
 & Llama-2-13b-Wiki & 0.800 (0.028) & 0.889 (0.026) & 0.842 (0.023) \\
 & Llama-2-13b-ELI5-Wiki & 0.801 (0.027) & 0.889 (0.026) & 0.842 (0.021) \\
 & Llama-2-13b-ELI5-Cleaned & 0.775 (0.041) & 0.863 (0.030) & 0.815 (0.033) \\
-& Llama-2-13b-ELI5-Cleaned-Wiki & 0.801 (0.025) & 0.891 (0.024) & 0.843 (0.020) \\
+& Llama-2-13b-ELI5-Cleaned-Wiki & \textbf{0.801 (0.025)} & \textbf{0.891 (0.024)} & \textbf{0.843 (0.020)} \\
 \bottomrule
 \end{tabular}
 \caption{BERTScores at 13B}
 \label{tab:bertscores_13B}
 \end{table}
 
-Next, in Table \ref{tab:FRE_FKG_13B} we look at the Flesch-Kincaid readability metrics for the 13B models. 
-We observe again the our fine-tuned models generally have a higher Flesch Readability ease score and a lower Flesch-Kincaid grade level.
-However, again there are some exceptions to this rule.
-In particular, for all three datasets the model trained on just Simple Wikipedia QA pairs has a lower FRE score and a higher FKG level, so according to both metrics this text is more ``complex".
-This may not be entirely surprising, Simple Wikipedia articles are still written in a more dry and more formal style than Reddit posts, and articles may not always be written in a simple way. 
-It would be interesting to see if this trend continues to even larger models, i.e. if we trained a 70B model on just the Simple Wikipedia QA pairs would it still be worse than the base 13B models, according to these two metrics, or would the trend reverse?
 
 \begin{figure}
-\includegraphics[scale=.5]{./figures/FRE_13B_ELI5.png}
-\includegraphics[scale=.5]{./figures/FRE_13B_Wiki.png}
-\\
-\includegraphics[scale=.5]{./figures/FRE_13B_full.png}
-\includegraphics[scale=.5]{./figures/FKG_13B_ELI5.png}
-\\
-\includegraphics[scale=.5]{./figures/FKG_13B_Wiki.png}
-\includegraphics[scale=.5]{./figures/FKG_13B_full.png}
+\includegraphics[scale=.5]{./figures/rougelsum_13B_eli5}
+\includegraphics[scale=.5]{./figures/bertscore_F1_13B_eli5}
+\includegraphics[scale=.5]{./figures/rougelsum_13B_wiki}
+\includegraphics[scale=.5]{./figures/bertscore_F1_13B_wiki}
+\includegraphics[scale=.5]{./figures/rougelsum_13B_full}
+\includegraphics[scale=.5]{./figures/bertscore_F1_13B_full}
+\caption{ROUGE and BERTScores for the 13B models}
+\label{fig:rouge_bertscore_13B}
 \end{figure}
 
 
+\begin{figure}
+\includegraphics[scale=.5]{./figures/FRE_13B_ELI5.png}
+\includegraphics[scale=.5]{./figures/FKG_13B_ELI5.png}
+\\
+\includegraphics[scale=.5]{./figures/FRE_13B_Wiki.png}
+\includegraphics[scale=.5]{./figures/FKG_13B_Wiki.png}
+\\
+\includegraphics[scale=.5]{./figures/FRE_13B_full.png}
+\includegraphics[scale=.5]{./figures/FKG_13B_full.png}
+\caption{FRE and FKG scores at 13B}
+\label{fig:FRE_FKG_13B}
+\end{figure}
 
-\begin{table}[h]
+Many of our observations for the 7B models carry over to the 13B models. 
+First, we see that the base Llama-2-13B model achieves the highest ROUGE scores on the ELI5 questions, and the difference is particularly significant on the RougeLsum metric (it also achieves the highest rouge1 score, but the differences between the models here are likely insignificant).
+As we can see from both the table and the KDE plots, our fine-tuned models in general achieve lower scores and are clustered close together.
+Similarly, the base Llama-2-13B model also generally performs better according to the BERTScore metrics, but here the differences are smaller and distributions all peak around the same values.
+The one noticeable difference is that the base-model appears to have slightly heavier tails on the KDE plot for the F1 score.
+
+On the Simple Wikipedia questions, we see that some of our fine-tuned models have a higher Rouge score than the base model, but all the results are within one standard deviation.
+From the KDE plots for the RougeLSum score, we notice that the model trained on the ELI5+simple wikipedia dataset is peaked more strongly at lower values, while the base model has heavier tails to the right. 
+This seems to indicate the base model is achieving better performance, according to this metric.
+For the BERTScores, on the other hand, we see that the model trained on the ELI5 + Wikipedia questions does have a noticeably higher recall and F1 scores in comparison to the base model, while the difference in precision is relatively small.
+On the KDE plot, we do see that the models trained on Simple Wikipedia alone or in combination with ELI5 are peaked at a higher value than the base-model, while the base-model does have slightly heavier tails.
+The same analysis carries over essentially unchanged for the models evaluated on ELI5 and Simple Wikipedia questions simultaneously.
+The models trained on ELI5 and Simple Wikipedia questions have comparable ROUGE scores in comparison to the base model and also have higher recall and F1 on the BERTScore metric.
+We also notice that the difference in the tails of the distribution of F1-scores for the base model and the models fine-tuned on ELI5 + Simple Wikipedia are distinguishable on the plot shown. 
+
+\begin{table}
 \centering
 \begin{tabular}{cccc}
 \toprule
@@ -702,7 +752,14 @@ Full & Llama-2-13b & 55.5964 & 10.028 \\
 \label{tab:FRE_FKG_13B}
 \end{table}
 
-
+Finally, in Table \ref{tab:FRE_FKG_13B} we look at the Flesch-Kincaid readability metrics for the 13B models. 
+We observe again the our fine-tuned models generally have a higher Flesch Readability ease score and a lower Flesch-Kincaid grade level.
+However, there are some exceptions to this rule.
+In particular, for all three datasets the model trained on just Simple Wikipedia QA pairs has a lower FRE score and a higher FKG level, so according to both metrics this text is more ``complex".
+This may not be entirely surprising, Simple Wikipedia articles are still written in a more dry and more formal style than Reddit posts, and articles may not always be written in a simple way. 
+It would be interesting to see if this trend continues to even larger models, i.e. if we trained a 70B model on just the Simple Wikipedia QA pairs would it still be worse than the base 13B models, according to these two metrics, or would the trend reverse?
+In Figure \ref{fig:FRE_FKG_13B} we also notice that, with the exception of the model trained solely on Simple Wikipedia questions, the distribution of scores for all models look roughly the same.
+However, our fine-tuned models do display a noticeably higher peak at higher values of the Flesch-Readability ease score and lower values of the Flesch-Kincaid grade level, which appears to indicate the text is less complex.
 
 \subsubsection{Judging the Validation Set with GPT-4}
 Finally, its time to move away from the world of automatic metrics and start to consider more fine-grained and intelligent ways to evaluate the output of generative models.
@@ -733,7 +790,7 @@ $[$Instruction$]$\newline Please act as an impartial judge and
 Here the text in \{question\} and \{answer\} correspond to the question in one of our datasets and the model generated answer, respectively.
 Given that GPT-4 is not cheap, we decided to only evaluate our models on the small validation set containing 100 questions from both ELI5 and Simple Wikipedia.
 
-\begin{table}[h]
+\begin{table}
 \centering
 \begin{tabular}{|l|c|}
 \hline
@@ -757,17 +814,30 @@ Llama-2-13b-ELI5 & 3.17 \\
 \caption{GPT-4 judgements at 7B and 13B}
 \label{tab:GPT4-judgements}
 \end{table}
+
+\begin{figure}
+\includegraphics[scale=.6]{./figures/GPT4_7B_scores.png}
+\includegraphics[scale=.6]{./figures/GPT4_13B_scores.png}
+\caption{KDE Plots for GPT-4 score distribution by model.}
+\label{fig:GPT_4_scores}
+\end{figure}
   
-In Table \ref{tab:GPT4-judgements} we present the average scores assigned by GPT-4 to each model, ranked for highest to lowest.
-We also separated the results by the size of the model.
+Our results are summarized in Table \ref{tab:GPT4-judgements} and the different score distributions are visualized in Figure \ref{fig:GPT_4_scores}.
+In Table \ref{tab:GPT4-judgements} we ranked each model from highest to lowest and also separated the results by the size of the base model.
 At both 7B and 13B, the three best performing models are the ones trained on ELI5 + Simple Wikipedia (using our original ELI5 SFT dataset or the cleaned one) and the one trained on just Simple Wikipedia.
 By contrast, the model trained on just ELI5 performs worse than the base model at both 7B and 13B.
 We think these results indicate that training on the more encyclopedic text of Simple Wikipedia helps the model generate more cogent answers.
 
+From the KDE plots for 7B models shown at the top of Figure \ref{fig:GPT_4_scores}, we observe that, with the exception of our models fine-tuned only on ELI5 data, our models have a relatively flatter distribution than the base model.
+For example, the model fine-tuned on questions from ELI5-cleaned + Simple Wikipedia achieves its maximum at 4 and generally has more support at higher scores than the base model. 
+However, the models fine-tuned only on questions from ELI5 do perform noticeably worse than the base model.
+At 13B we see a similar phenomenon at the bottom of Figure \ref{fig:GPT_4_scores}.
+Here we see that the models trained on the combined ELI5 + Simple Wikipedia data have more support at higher scores than the base model. 
+The models trained on just ELI5 data do have peaks further to the right than the base model, but they also drop more sharply once we look at scores $\geq 7$.
 
-
-
-
+Overall, one takeaway from all these results is that training on a combination of ELI5 and Simple Wikipedia data appears to lead to the best models and that it is important to use either an intelligent AI or humans to judge the output of generative models.
+While the models trained on just ELI5 data were labelled as more readable, according to the Flesch-Kincaid reading metrics, they were also given lower scores by GPT-4 on the quality of their answers.
+From our non-scientific perusal of the answers generated by these models, we do also observe that in general training on both ELI5 + Simple Wikipedia did lead to the best results.
 
 
 %\subsubsection{MT(S)-Bench}
