address pad/eos issue in tokenizer (transformers#22794)

--- a/training/david/SFT/aws_qlora_SFT.ipynb
+++ b/training/david/SFT/aws_qlora_SFT.ipynb
@@ -429,7 +429,7 @@
    "source": [
     "model_id = \"meta-llama/Llama-2-7b-hf\" # sharded weights\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id,use_auth_token=hf_token)\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "tokenizer.add_special_tokens({'pad_token': '[PAD]'})\n",
     "\n",
     "model_name = model_id.split('/')[-1]\n",
     "\n",
